--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository" : { 
+    "type" : "git",
+    "url" : "https://github.com/frisco82/driveRecover.git"
+  },
   "author": "Ramiro Aparicio <rapariciog@gmail.com>",
   "license": "ISC",
   "dependencies": {
